--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Image_Drawer</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="preview_top">Hello my friend. Try this. Only two colors - black and white</string>
+    <string name="preview_bottom">created with genetic algorithm</string>
 </resources>
